deploy/k8s/overlays/dev/patch-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 750m
              memory: 768Mi
