deploy/k8s/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledgrionyx
spec:
  rules:
    - host: app.dev.ledgrionyx.com
